--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
@@ -204,7 +204,7 @@
                     contentType: 'application/json; charset=utf-8',
                     success: function (data)
                     {
-                        IdVacaciones.PerformCallback();
+                        IdVacacion.PerformCallback();
 
                     },
                     error: function (error)
