--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/_GridViewPartial_devolucion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/_GridViewPartial_devolucion.cshtml
@@ -75,9 +75,16 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = System.Web.UI.WebControls.Unit.Pixel(150);
         });
-        settings.Columns.Add("cod_Dev_Inven", "Código").Width = Unit.Percentage(20);
+        settings.Columns.Add("IdDev_Inven", "ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("cod_Dev_Inven", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("observacion", "Observación").Width = Unit.Percentage(60);
-        settings.Columns.Add("Fecha", "Fecha").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Fecha";
+            column.Caption = "Fecha";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        });
         settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
 
     });
