--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_003.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.Helps.cl_filtros_Info
+﻿@model Core.Erp.Info.Helps.cl_filtros_contabilidad_Info
 @{
     Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
     ViewBag.Title = "CONTA_003";
@@ -58,6 +58,13 @@
                             <label for="IdNivel">Nivel</label>
                             @Html.DropDownListFor(q => q.IdNivel, new SelectList(ViewBag.lst_nivel, "Key", "Value"), new { @class = "form-control" })
                             @Html.ValidationMessageFor(q => q.IdNivel, "", new { @class = "form", @role = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="IdNivel">Balance</label>
+                            @Html.DropDownListFor(q => q.balance, new SelectList(ViewBag.lst_balance, "Key", "Value"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.balance, "", new { @class = "form", @role = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-3">
